@@ -41,7 +41,6 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import javax.validation.ConstraintViolation;
 import javax.validation.Validator;
@@ -91,7 +90,7 @@ public class AccountService {
      * @param issuerId      The id of the user who created the accounts.
      * @return Returns a map which contains two lists, Errored and Created accounts. Created will have object ID set.
      **/
-    public Map<CreationEnum, List<? extends AzureAccount>> addAzureAccounts(
+    public Map<CreationEnum, List<? extends AzureAccount>> addAzureAccounts(//NOSONAR
         List<AzureAccount> azureAccounts, String issuerId, boolean isExisting) {
 
         Map<CreationEnum, List<? extends AzureAccount>> processedAccounts = new ConcurrentHashMap<>();
@@ -107,7 +106,7 @@ public class AccountService {
                 ErroredAzureAccount erroredSubscriber = new ErroredAzureAccount(azureAccount);
                 erroredSubscriber.setErrorMessages(constraintViolationSet
                                                        .stream().map(constraint -> constraint.getPropertyPath()
-                        + ": " + constraint.getMessage()).collect(Collectors.toList()));
+                        + ": " + constraint.getMessage()).toList());
                 erroredAccounts.add(erroredSubscriber);
                 continue;
             }
@@ -122,25 +121,18 @@ public class AccountService {
                     boolean emailSent = publicationService.sendNotificationEmailForDuplicateMediaAccount(
                             azureAccount.getEmail(), userAzure.givenName);
 
-                    if (!emailSent) {
-                        ErroredAzureAccount softErroredAccount = new ErroredAzureAccount(azureAccount);
-                        softErroredAccount.setErrorMessages(
-                            List.of("Unable to send duplicate media account email"));
-                        erroredAccounts.add(softErroredAccount);
-                    }
-                    continue;
-                }
+                    checkAndAddToErrorAccount(emailSent, azureAccount,
+                                              "Unable to send duplicate media account email",
+                                              erroredAccounts);
+                } else {
 
-                User user = azureUserService.createUser(azureAccount);
-                azureAccount.setAzureAccountId(user.id);
-                createdAzureAccounts.add(azureAccount);
+                    User user = azureUserService.createUser(azureAccount);
+                    azureAccount.setAzureAccountId(user.id);
+                    createdAzureAccounts.add(azureAccount);
 
-                log.info(writeLog(issuerId, UserActions.CREATE_ACCOUNT, azureAccount.getAzureAccountId()));
-
-                if (!handleAccountCreationEmail(azureAccount, user.givenName, isExisting)) {
-                    ErroredAzureAccount softErroredAccount = new ErroredAzureAccount(azureAccount);
-                    softErroredAccount.setErrorMessages(List.of(EMAIL_NOT_SENT_MESSAGE));
-                    erroredAccounts.add(softErroredAccount);
+                    log.info(writeLog(issuerId, UserActions.CREATE_ACCOUNT, azureAccount.getAzureAccountId()));
+                    boolean emailSent = handleAccountCreationEmail(azureAccount, user.givenName, isExisting);
+                    checkAndAddToErrorAccount(emailSent, azureAccount, EMAIL_NOT_SENT_MESSAGE, erroredAccounts);
                 }
 
             } catch (AzureCustomException azureCustomException) {
@@ -158,6 +150,15 @@ public class AccountService {
         return processedAccounts;
     }
 
+    private void checkAndAddToErrorAccount(boolean checkCondition, AzureAccount azureAccount, String errorMessage,
+                                           List<ErroredAzureAccount> erroredAccounts) {
+        if (!checkCondition) {
+            ErroredAzureAccount softErroredAccount = new ErroredAzureAccount(azureAccount);
+            softErroredAccount.setErrorMessages(List.of(errorMessage));
+            erroredAccounts.add(softErroredAccount);
+        }
+    }
+
     /**
      * Method to add users to P&I database, loops through the list and validates the email provided then adds them to
      * success or failure lists.
@@ -166,7 +167,7 @@ public class AccountService {
      * @param issuerId the id of the admin adding the users for logging purposes.
      * @return Map of Created and Errored accounts, created has UUID's and errored has user objects.
      */
-    public Map<CreationEnum, List<?>> addUsers(List<PiUser> users, String issuerId) {
+    public Map<CreationEnum, List<?>> addUsers(List<PiUser> users, String issuerId) { //NOSONAR
         List<UUID> createdAccounts = new ArrayList<>();
         List<ErroredPiUser> erroredAccounts = new ArrayList<>();
 
@@ -182,22 +183,18 @@ public class AccountService {
                 erroredUser.setErrorMessages(List.of(
                     "System admins must be created via the /account/add/system-admin endpoint"));
                 erroredAccounts.add(erroredUser);
-                continue;
-            }
+            } else if (constraintViolationSet.isEmpty()) {
+                PiUser addedUser = userRepository.save(user);
+                createdAccounts.add(addedUser.getUserId());
 
-            if (!constraintViolationSet.isEmpty()) {
+                log.info(writeLog(issuerId, UserActions.CREATE_ACCOUNT, addedUser.getUserId().toString()));
+            } else {
                 ErroredPiUser erroredUser = new ErroredPiUser(user);
                 erroredUser.setErrorMessages(constraintViolationSet
                                                  .stream().map(ConstraintViolation::getMessage)
-                                                 .collect(Collectors.toList()));
+                                                 .toList());
                 erroredAccounts.add(erroredUser);
-                continue;
             }
-
-            PiUser addedUser = userRepository.save(user);
-            createdAccounts.add(addedUser.getUserId());
-
-            log.info(writeLog(issuerId, UserActions.CREATE_ACCOUNT, addedUser.getUserId().toString()));
         }
 
         Map<CreationEnum, List<?>> processedAccounts = new ConcurrentHashMap<>();
@@ -264,7 +261,7 @@ public class AccountService {
         return emailMap;
     }
 
-    public Map<CreationEnum, List<?>> uploadMediaFromCsv(MultipartFile mediaCsv, String issuerId) {
+    public Map<CreationEnum, List<?>> uploadMediaFromCsv(MultipartFile mediaCsv, String issuerId) { //NOSONAR
         List<MediaCsv> mediaList;
 
         try (InputStreamReader inputStreamReader = new InputStreamReader(mediaCsv.getInputStream());
@@ -306,7 +303,7 @@ public class AccountService {
             Stream.concat(
                 azureAccounts.get(CreationEnum.ERRORED_ACCOUNTS).stream(),
                 piUserAccounts.get(CreationEnum.ERRORED_ACCOUNTS).stream()
-            ).distinct().collect(Collectors.toList())
+            ).distinct().toList()
         );
         return completedAccounts;
     }
